--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,14 @@ input[type="checkbox"] {
 
 /* F1F3F5  #f9fafb #FBF5EF*/
 
+@layer base {
+  :root {
+    --gray-100: 229 233 237;
+    --gray-400: 134 141 154;
+    --gray-500: 107 114 128;
+  }
+}
+
 @layer components {
   /* .page {
     @apply flex h-fit flex-1 flex-col items-stretch;
@@ -53,5 +61,20 @@ input[type="checkbox"] {
   }
   .animation-delay-4000 {
     animation-delay: 4s;
+  }
+  .scrollbar::-webkit-scrollbar {
+    width: 1rem;
+  }
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(var(--gray-100));
+    border-radius: 0.5rem;
+    border: 0.25rem solid transparent;
+    background-clip: content-box;
+  }
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(var(--gray-400));
+  }
+  .scrollbar::-webkit-scrollbar-thumb:active {
+    background-color: rgb(var(--gray-500));
   }
 }
